methods.args.MethodsArgs.scala.code
def move(stepCount: Int,forward: Boolean) {if (forward) {for (i<-1 to stepCount) {forward()} else {backward()}}}